# spotlight

./: .travis.yml  build-latest-json.js  latest.json  package-lock.json  package.json  settings.html  test-update-server.js
.github/workflows/: build.yml  release.yml  windows.yml
src/: App.css  App.tsx  settings.css  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-spotlight-commands.json
src-tauri/src/: lib.rs  main.rs
src/components/: CopyButton.tsx  ErrorBoundary.tsx  MessageRenderer.tsx  PresetManager.css  PresetManager.tsx  ThinkingRenderer.css  ThinkingRenderer.tsx  UpdateNotification.css  UpdateNotification.tsx
