[package]
name = "spotlight"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Note: macos-private-api feature must be enabled here (not just in target-specific deps)
# because tauri.conf.json has "macOSPrivateApi": true. Tauri only compiles the macOS-specific
# code on macOS builds, so this won't affect Windows builds.
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.6"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
png = "0.17"
tauri-plugin-store = "2.4.0"
tauri-plugin-updater = "2"
thiserror = "2.0.17"
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"
